After some work and setup change we were capable to make the first button working